Cleanup spec a lot

--- a/docs/spec/preamble.tex
+++ b/docs/spec/preamble.tex
@@ -1,7 +1,7 @@
 \usepackage[dvipsnames]{xcolor}
 \usepackage{amsmath, amssymb, amsthm, thmtools, thm-restate, tikz, graphicx,
   hyperref, cleveref, comment, expl3, xparse, ebproof, enumitem,
-  stmaryrd, verbatim, todonotes, xargs}
+  stmaryrd, verbatim, todonotes, xargs, url, mathtools}
 
 \usepackage[altpo]{backnaur}
 
@@ -129,6 +129,8 @@
 
 \DeclareMathOperator{\hnf}{hnf}
 \DeclareMathOperator{\neutral}{neutral}
+
+\newcommand{\lambdacplus}{$\lambda C+$}
 
 % \DeclareMathOperator{\lett}{let}
 % \DeclareMathOperator{\inn}{in}
